--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "serve": "node index",
     "start": "nodemon index"
   },
   "keywords": [],
@@ -12,7 +13,8 @@
   "dependencies": {
     "apollo-server": "^3.3.0",
     "bcrypt": "^5.0.1",
-    "graphql": "^15.5.2",
+    "graphql": "^15.5.3",
+    "graphql-tag": "^2.12.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4"
   },
